--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
-osx_image: xcode7.3
 language: objective-c
-# cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+osx_image: xcode9.1
+branches:
+  only:
+    - master
+env:
+  global:
+    - LANG=en_US.UTF-8
+    - WORKSPACE=Example/FRCircleSlider.xcworkspace
+    - SCHEME="FRCircleSlider-Example"
+    - DESTINATION="OS=11.1,name=iPhone X"
 script:
-- set -o pipefail && xcodebuild test -workspace Example/FRCircleSlider.xcworkspace -scheme FRCircleSlider-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+  - set -o pipefail
+  - xcodebuild -version
+  - xcodebuild -showsdks
+  - xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty;
