--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,14 @@ build/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
+xcshareddata/
 *.xccheckout
 profile
 *.moved-aside
 DerivedData
 *.hmap
 *.ipa
-
+*.*~
 # Bundler
 .bundle
 
